EKS01/webservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: webapp
