EKS01/microservice-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: micro-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: learn.devops4u.xyz
      http:
        paths:
          - backend:
              serviceName: webapp-service
              servicePort: 80
